# white-lights

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  set-up-db.sh
client/src/: .eslintrc.js  package.json
client/src/components/form/: FormContainer.tsx
client/src/components/layout/: Layout.tsx  Navigation.tsx  styles.global.js
client/src/pages/: login.tsx
server/white-lights/: Cargo.toml
server/white-lights/src/: main.rs
server/white_lights/: Cargo.toml  Rocket.toml
server/white_lights/migrations/2020-12-23-111617_create_users/: down.sql  up.sql
server/white_lights/src/: api.rs  auth.rs  db.rs  db_load.rs  env_vars.rs  main.rs  pool.rs  schema.rs  wl_error.rs
server/white_lights/src/api/: response.rs
server/white_lights/src/users/: auth.rs  mod.rs  routes.rs  wl_users.rs
src/client/: .prettierrc  package-lock.json
src/client/components/form/: FormContainer.tsx  TextInput.tsx
src/client/components/landing/: Landing.tsx
src/client/components/layout/: Layout.tsx  styles.global.js
src/client/pages/: 404.tsx  _app.jsx  index.tsx  login.tsx
src/client/theme/: theme.ts
