[package]
name = "white_lights"
version = "0.1.0"
authors = ["Johannes Katajamäki <jkatajamki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
dotenv = "0.15"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
